<resources>
    <string name="app_name">Simple Notes</string>
    <string name="popupmenu_change_colors">change colors</string>
    <string name="popupmenu_delete">delete</string>
    <string name="new_note_dialog_enter_note_name">Enter note name</string>
    <string name="note_already_exists">Note with this name already exists</string>
    <string name="note_bad_name">Name of note is invalid</string>
    <string name="do_you_want_to_save_the_changes">Do you want to save the changes?</string>
    <string name="fail_write_to_db">Save to database failed.</string>
    <string name="popupmenu_rename">rename</string>
    <string name="note_background_color">Note background color</string>
    <string name="note_text_color">Note text color</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="passwords_are_not_the_same">Passwords are not the same</string>
    <string name="user_created">User created successfully</string>
    <string name="user_already_exists">User with this name already exists</string>
    <string name="server_error">Server error</string>
    <string name="register">register</string>
    <string name="log_in">log in</string>
    <string name="there_is_no_such_user">There is no user with this name</string>
    <string name="wrong_password">Wrong password</string>
    <string name="login_successful">Log in successful</string>
    <string name="notes_uploaded_successfully">Notes uploaded successfully</string>
    <string name="you_need_to_login">You need to login first</string>
    <string name="upload">upload</string>
    <string name="load">load</string>
    <string name="create_account">create account</string>
    <string name="add_note">add note</string>
</resources>